# Omnium

./: .env.example  .gitignore  CLAUDE.md  In progress parts.py  Logging & Portfolio.py  Portfolio.py  README.md  README.txt  SonarQube_VSCode_Setup_README.md  TESTS_QUICK_REFERENCE.md  TESTS_READY.md  TEST_IMPLEMENTATION_SUMMARY.md  auth_system.py  auth_system_json  build.bat  credentials.json  db.py  email_service.py  how_to_setup.txt  launch_omnium.bat  lockouts.json  opusContext.txt  pyproject.toml  requirements.txt  run_auth_system.py  run_tests.py  search.py  seed.py  setup_db.py  setup_dev.py  sonar-project.properties  stub.py  test_orchestrator.py  trading_algorithm_module.py
.github/workflows/: sonarqube.yml
Omnium.UI/: App.xaml  App.xaml.cs  LoginWindow.xaml  LoginWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Omnium.UI.csproj  Omnium.UI.sln
Omnium.UI/Services/: ApiClient.cs
Omnium.UI/Themes/: DarkTheme.xaml  LightTheme.xaml
config/: .env.example
database/: db.py  schema.sql  seed.py
devtools/: __init__.py  render_changed_puml.py  watcher.py
devtools/utils/: __init__.py  conda.py  git_hooks.py  plantuml.py  vscode.py
docs/: api-guide.md  architecture.drawio  clean-up-repo-4-10-26-done.md  clean-up-repo-4-10-26.md  lessons-learned-db-indexes.md  lessons-learned.md  project-status.md  repo-cleanup-guide.md
docs/documents_with_feedback/: 202601_3370_QuantumShell_Omnium_SDD - Feedback.docx  202601_3370_QuantumShell_Omnium_STD - Feedback.docx  202601_3370_QuantumShell_PP - Feedback.docx  202601_3370_QuantumShell_SRS - Feedback.docx  202601_COSC3370_QuantumShell_Omnium_PVD - Feedback.docx
docs/templates/: Project Plan (PP) Template 202502.docx  Project Software Design Document (SDD) Template 202409.docx  Project Software Requirements Specifications (SRS) Template 202409.docx  Project Software Test Description (STD) Template 202409.docx  Project Vision Document (PVD) Template 202501.docx
project_docs/: error-codes.md
registration/: auth_system.py  credentials.json  lockouts.json
sonarqube/: sonar-project.properties
src/omnium/: __init__.py  __main__.py  api.py
tests/: TEST_SUITE_README.md  test_auth.py  test_integration.py  test_trading_algorithm.py
tests/benchmarks/: test_function_benchmarks.py  test_pipeline_benchmarks.py
tests/devtools/: test_conda.py  test_git_hooks.py  (+2 more)
trading_logic/: orchestrator.py  trading_algorithm.py
(+24 files in other folders)
