[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "omnium"
version = "0.1.0"
description = "Automated day-trading platform with rule-based and ML-driven algorithms"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0",
    "alembic>=1.12",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "websockets>=12.0",
    "httpx>=0.25",
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "watchdog>=3.0",
]

# ── Package Discovery ──────────────────────────────────────────
# Tells setuptools the omnium package lives inside src/
[tool.setuptools.packages.find]
where = ["src"]

# ── Pytest ─────────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src", "."]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "benchmark: marks performance benchmark tests",
]
addopts = "-v --tb=short"

# ── Ruff Linter ────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "devtools", "tests"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors (syntax, indentation)
    "F",     # pyflakes (unused imports, undefined names)
    "W",     # pycodestyle warnings
    "I",     # isort (import ordering)
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify (simplifiable code)
]
ignore = [
    "E501",  # line too long — let formatter handle it
    "B010",  # do not call setattr with a constant attribute value
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B", "SIM", "E731"]          # relax rules in tests
"src/omnium/**/__init__.py" = ["F401"]     # stubs import things they'll use when implemented
"src/omnium/orchestration/**" = ["F401", "F841"]  # orchestrator imports for wiring
"src/omnium/models/**" = ["UP042"]         # keep str+Enum for Python 3.10 compat

# ── Ruff Formatter (optional — use if team wants auto-formatting) ──
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
